2008-07-31  Cody Russell  <bratsche@gnome.org>

	Bug 56070 – Can't click button after setting it sensitive.

	* gtk/gtkwidget.[ch]
	* gtk/gtkwindow.c
	* gtk/gtkmain.c
	* gtk/gtkbutton.c
	* gtk/gtkprivate.h
	* gdk/gdkevents.h: Synthesize crossing events events where necessary.

	* gtk/tests/crossingevents.c: Add unit tests for crossing events.

	Big thanks to Ed Catmur, Matthias Clasen, and everyone else who
	has worked on and helped out with this.

2008-07-31  Matthias Clasen  <mclasen@redhat.com>

	Bug 424207 – printing hangs on unreachable cups server

	* modules/printbackends/cups/gtkcupsutils.[hc]: Implement a
	non-blocking test for reachability of the cups server.

	* modules/printbackends/cups/gtkprintbackendcups.c: Don't block
	while trying to get the default printer. Patch by Marek Kasik.

2008-07-31  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/gtkimcontextmultipress.c: Use a second-granularity
	timer for automatic commit.

	* gtk/gtkclipboard.c (gtk_clipboard_store): Use a second-grandularity
	timer for the store timeout.

2008-07-31  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdk.[hc]:
	* gdk/gdk.symbols: Complete the set of thread-safe timeout function
	with second-granularity versions. Patch by Marek Kasik.

2008-07-30  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkprintoperation-win32.c: Fix problems in handling custom
	paper sizes. The DEVMODE::dmPaperWidth and dmPaperLength are in
	tenths of a millimeter, and the RECT passed to CreateEnhMetaFile()
	is in hundredths of a millimeter. Patch by Sven Neumann.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodel.c: Small doc improvements.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump GLib requirement to 2.17.5 for GEmblemedIcon

	* gtk/gtkicontheme.c: Support rendering GEmblemedIcons.

2008-07-27  Sven Herzberg  <sven@imendio.com>

	Bug 544863 – gtkquartz.h not included in released 2.13.5 package
